--- a/MyWebBrowser/app/src/main/res/layout/activity_main.xml
+++ b/MyWebBrowser/app/src/main/res/layout/activity_main.xml
@@ -24,6 +24,7 @@
         android:layout_marginEnd="8dp"
         android:ems="10"
         android:hint="http://"
+        android:imeOptions="actionDone"
         android:inputType="textUri"
         android:singleLine="true"
         app:layout_constraintEnd_toEndOf="parent"
