--- a/MyWebBrowser/app/src/main/res/menu/main.xml
+++ b/MyWebBrowser/app/src/main/res/menu/main.xml
@@ -2,19 +2,31 @@
 <menu xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:title="검색 사이트">
-        <menu>
+
+    <item android:title="검색 사이트" >
+        <menu >
             <item
                 android:id="@+id/action_naver"
-                android:title="Naver"
-                app:showAsAction="never" />
+                android:title="네이버" />
             <item
                 android:id="@+id/action_google"
-                android:title="Google"
-                app:showAsAction="never" />
+                android:title="구글" />
             <item
                 android:id="@+id/action_daum"
                 android:title="다음" />
+        </menu>
+    </item>
+    <item android:title="개발자 정보" >
+        <menu >
+            <item
+                android:id="@+id/action_call"
+                android:title="연락처" />
+            <item
+                android:id="@+id/action_send_text"
+                android:title="문자 보내기" />
+            <item
+                android:id="@+id/action_email"
+                android:title="이메일 보내기" />
         </menu>
     </item>
     <item
@@ -22,19 +34,4 @@
         android:icon="@drawable/ic_home_black_24dp"
         android:title="Home"
         app:showAsAction="ifRoom" />
-    <item
-        android:title="개발자 정보"
-        app:showAsAction="never">
-        <menu >
-            <item
-                android:id="@+id/action_call"
-                android:title="연락처" />
-            <item
-                android:id="@+id/action_send_text"
-                android:title="문자보내기" />
-            <item
-                android:id="@+id/action_email"
-                android:title="이메일 보내기" />
-        </menu>
-    </item>
 </menu>
