--- a/TodoList/app/src/main/res/layout/activity_edit.xml
+++ b/TodoList/app/src/main/res/layout/activity_edit.xml
@@ -8,8 +8,10 @@
 
     <CalendarView
         android:id="@+id/calendarView"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
